argocd/md-converter-dev/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: dockerconfigjson-github-com
      containers:
      - name: frontend
        image: ghcr.io/alex-j-butler/markdown-converter-api/frontend:997c82e
        ports:
        - containerPort: 3000
