argocd/md-converter-dev/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  labels:
    app: worker
spec:
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      imagePullSecrets:
        - name: dockerconfigjson-github-com
      containers:
      - name: worker
        image: ghcr.io/alex-j-butler/markdown-converter-api/worker:a1ed3d3
